--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     />
     <meta
       name="keywords"
-      content="Eki, Eki Zulfar,Eki Zulfar Rachman, siapa Eki, Eki adalah , Siapa Eki Zulfar , ekizr"
+      content=""
     />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta
       name="title"
-      content="Eki Zulfar Rachman - Profil Pengembang Front-End Web"
+      content="Art Portfolio"
     />
     <meta
       name="description"
